# AQEE-Orchestrator

./: .env  .env.example  .gitignore  AGENT_ENHANCEMENTS.md  COMPLETION_SUMMARY.md  DESIGNER_EDGE_CASES.md  README.md  SECURITY.md  SETUP_GUIDE.md  TEST_AUTOMATION_DESIGNER.md  __init__.py  agent.py  pyproject.toml  requirements.txt  test_agents.py
.adk/: check_import.py
agents/: __init__.py  acceptance_criteria_manager.py  api_framework_designer.py  architect.py  ci_cd_designer.py  coverage_analyst.py  designer.py  devops_linker.py  environment_manager.py  execution_strategy_designer.py  issue_tracker.py  planner.py  report_generator.py  requirement_analyst.py  resource_planner.py  story_architect.py  suite_organizer.py  test_automation_designer.py  test_executor.py  testcase_author.py  testdata_engineer.py  testplan_designer.py  ui_framework_designer.py
agents/.adk/: session.db
data/.adk/: session.db
qa_orchestrator/: .env  __init__.py  agent.py  azure_devops.py  custom_functions.py  secrets.py
qa_orchestrator/.adk/: session.db
qa_orchestrator/agents/: __init__.py  architect.py  designer.py  planner.py
tests/: test_azure_client.py  test_secrets.py
